# Narrative-Analysis

./: README.md  ml-text-analysis.py  proposal.md  trainable-model.py
client/: client-model.py
federated_learning/narrative-analysis/: README.md  pyproject.toml
federated_learning/narrative-analysis/narrative_analysis/: __init__.py  client_app.py  server_app.py  task.py
narrative-analysis/: pyproject.toml
narrative-analysis/narrative_analysis/: client_app.py  server_app.py  task.py
